[gd_scene load_steps=13 format=3 uid="uid://c861cn88fhetm"]

[ext_resource type="Script" path="res://OLD-files/world-gen/thirdWorld/clipmap.gd" id="1_g1t16"]
[ext_resource type="Shader" uid="uid://b1wtdlc2wi3wv" path="res://OLD-files/world-gen/thirdWorld/terrain_shader.tres" id="2_uk87b"]
[ext_resource type="ArrayMesh" uid="uid://btxc0jr7t5wv8" path="res://OLD-files/world-gen/thirdWorld/ground_mesh.obj" id="3_xms6k"]
[ext_resource type="Script" path="res://OLD-files/world-gen/thirdWorld/GroundMesh.gd" id="4_3u3le"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_m0f08"]
frequency = 0.0181

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vo7sb"]
noise = SubResource("FastNoiseLite_m0f08")

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_u76ko"]
noise = SubResource("FastNoiseLite_m0f08")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_t5esh"]
noise_type = 3
frequency = 0.0113

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_lpxhb"]
noise = SubResource("FastNoiseLite_t5esh")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_pseon"]
frequency = 0.0046
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_fmijv"]
noise = SubResource("FastNoiseLite_pseon")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pu8bo"]
render_priority = 0
shader = ExtResource("2_uk87b")
shader_parameter/uvx = 0.0
shader_parameter/uvy = 0.0
shader_parameter/Height_multiplier = 2.845
shader_parameter/Heightmap = SubResource("NoiseTexture2D_vo7sb")
shader_parameter/sandBiome = SubResource("NoiseTexture2D_fmijv")
shader_parameter/coralBiome = SubResource("NoiseTexture2D_lpxhb")
shader_parameter/Texture = SubResource("NoiseTexture2D_u76ko")

[node name="Section1v2" type="StaticBody3D"]

[node name="clipmap" type="Node3D" parent="."]
script = ExtResource("1_g1t16")

[node name="GroundMesh" type="MeshInstance3D" parent="clipmap"]
material_override = SubResource("ShaderMaterial_pu8bo")
mesh = ExtResource("3_xms6k")
skeleton = NodePath("../../../..")
script = ExtResource("4_3u3le")
section_center_1_path = null
section_center_2_path = null
section_center_3_path = null

[node name="Section1" type="Marker3D" parent="clipmap"]

[node name="Section2" type="Marker3D" parent="clipmap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 632.956, 0, 0)

[node name="Section3" type="Marker3D" parent="clipmap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 750.623, 0, 0)
